--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,9 @@ stylecop.*
 *.dbmdl
 Generated_Code #added for RIA/Silverlight projects
 
+#node.js
+node_modules
+
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
